feat: minor language improvements